--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@clerk/clerk-react": "^5.31.1",
+    "@clerk/react-router": "^1.4.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
@@ -31,6 +33,7 @@
     "react-responsive": "^10.0.1",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.5.2",
+    "react-scan": "^0.3.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vite-tsconfig-paths": "^5.1.4"
