--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-router": "^7.5.2",
     "react-router-dom": "^7.6.0",
     "react-scan": "^0.3.3",
+    "sweetalert2": "^11.21.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vite-tsconfig-paths": "^5.1.4"
