--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@clerk/react-router": "^1.4.4",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.4",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -25,6 +26,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "framer-motion": "^12.12.2",
     "g": "^2.0.1",
     "json-server": "^1.0.0-beta.3",
     "lucide-react": "^0.503.0",
