--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@headlessui/react": "^2.2.4",
+    "@hookform/resolvers": "^5.0.1",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@radix-ui/react-accordion": "^1.2.8",
@@ -32,6 +33,7 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-hook-form": "^7.56.4",
     "react-responsive": "^10.0.1",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.6.0",
@@ -39,7 +41,8 @@
     "sweetalert2": "^11.21.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "vite-tsconfig-paths": "^5.1.4"
+    "vite-tsconfig-paths": "^5.1.4",
+    "zod": "^3.25.28"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
