added wishlist, product filtering and a lot of refactoring across all pages and components

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -29,8 +29,7 @@
       "@pages/*": ["src/pages/*"],
       "@lib/*": ["src/lib/*"],
       "@routes/*": ["src/routes/*"],
-      "@layout/*": ["src/layout/*"],
-      "@assets/*": ["public/assets/*"]
+      "@layout/*": ["src/layout/*"]
     }
   },
   "include": ["src"]
