--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "axios": "^1.9.0",
     "boxicons": "^2.1.4",
     "class-variance-authority": "^0.7.1",
+    "classnames": "^2.5.1",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -33,12 +34,14 @@
     "lucide-react": "^0.503.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet-async": "^2.0.5",
     "react-hook-form": "^7.56.4",
     "react-responsive": "^10.0.1",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.6.0",
     "react-scan": "^0.3.3",
-    "sweetalert2": "^11.21.2",
+    "react-skeleton-loaders": "^1.0.2",
+    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vite-tsconfig-paths": "^5.1.4",
@@ -49,6 +52,7 @@
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-helmet": "^6.1.11",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
