--- a/netlify.toml
+++ b/netlify.toml
@@ -13,17 +13,14 @@ to = "/index.html"
 status = 200
 
 [[headers]]
-for = "/*"
-[headers.values]
-  Content-Security-Policy = "default-src 'self'; img-src * data: blob:; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; connect-src *"
-  X-Frame-Options = "DENY"
-  X-Content-Type-Options = "nosniff"
-  Referrer-Policy = "strict-origin-when-cross-origin"
-  Strict-Transport-Security = "max-age=63072000; includeSubDomains; preload"
-  Permissions-Policy = "camera=(), microphone=(), geolocation=()"
-
-# Optional: custom 404 page support
-[[redirects]]
-from = "/404"
-to = "/404.html"
-status = 404
+  for = "/*"
+  [headers.values]
+    Content-Security-Policy = """
+      default-src 'self';
+      script-src 'self' 'unsafe-inline' https://unpkg.com https://*.clerk.com https://*.clerk.dev;
+      style-src 'self' 'unsafe-inline' https://unpkg.com https://*.clerk.com https://*.clerk.dev;
+      connect-src 'self' https://*.clerk.com https://*.clerk.dev;
+      font-src 'self' https://unpkg.com;
+      img-src 'self' data: https:;
+      frame-src https://*.clerk.com https://*.clerk.dev;
+    """
