--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.4",
+    "react-hot-toast": "^2.5.2",
     "react-responsive": "^10.0.1",
     "react-router": "^7.5.2",
     "react-router-dom": "^7.6.0",
     "react-scan": "^0.3.3",
     "react-skeleton-loaders": "^1.0.2",
-    "sweetalert2": "^11.6.13",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vite-tsconfig-paths": "^5.1.4",
