--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "react-router-dom": "^7.6.0",
     "react-scan": "^0.3.3",
     "react-skeleton-loaders": "^1.0.2",
+    "sharp": "^0.34.2",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
+    "uuid": "^11.1.0",
     "vite-tsconfig-paths": "^5.1.4",
     "zod": "^3.25.28"
   },
@@ -52,14 +54,19 @@
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "critical": "^7.2.1",
     "eslint": "^9.22.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
+    "rollup-plugin-visualizer": "^6.0.0",
+    "terser": "^5.40.0",
     "tw-animate-css": "^1.2.8",
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.1",
-    "vite": "^6.3.1"
+    "vite": "^6.3.1",
+    "vite-plugin-compression": "^0.5.1",
+    "webpack-bundle-analyzer": "^4.10.2"
   }
 }
